<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/beatDisplayToggleButton"
        android:layout_below="@+id/beatDisplayToggleButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect" />

            <Button
                android:id="@+id/disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect" />
        </LinearLayout>

        
        <Spinner
            android:id="@+id/fileChooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <Button
            android:id="@+id/chooseFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/chooseFile"
            android:visibility="gone" />

        <TextView
            android:id="@+id/FileLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/labelInputFile"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:visibility="gone" />

        <TextView
            android:id="@+id/InputFileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/NoInput"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <Button
            android:id="@+id/playPauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/playPause" 
            android:visibility="gone"/>

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/start" />

        <ToggleButton
            android:id="@+id/beatDisplayToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/beat" />

        <Button
            android:id="@+id/bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="testBluetooth"
            android:text="@string/bluetooth"
            android:visibility="gone" />
    </LinearLayout>

    <Spinner
        android:id="@+id/moveChooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
